Tune Presto memory for r3.2xlarge instances.